<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="family_nama">Nama Family</string>
    <string-array name="family_icon">
        <item>@drawable/family</item>
        <item>@drawable/family2</item>
        <item>@drawable/family3</item>
        <item>@drawable/family4</item>
        <item>@drawable/family5</item>
        <item>@drawable/family6</item>
        <item>@drawable/family7</item>
        <item>@drawable/family8</item>
    </string-array>
    <string name="family_deskripsi">Deskripsi Family</string>
    <string name="family_periode">Periode Hidup</string>
    <string name="family_karakteristik">Karakteristik Family</string>
    <string-array name="family_habitat">
        <item>Daratan</item>
        <item>Dataran banjir dan rawa-rawa</item>
        <item>Daratan</item>
        <item>Daratan</item>
        <item>Daratan</item>
        <item>Dataran banjir dan rawa-rawa</item>
        <item>Daratan</item>
        <item>Daratan</item>
    </string-array>
    <string name="family_perilaku">Perilaku</string>
    <string name="family_klasifikasi">Klasifikasi</string>
    <string-array name="family_names">
        <item>Ceratopsidae</item>
        <item>Hadrosauridae</item>
        <item>Stegosauridae</item>
        <item>Ankylosauridae</item>
        <item>Tyrannosauridae</item>
        <item>Spinosauridae</item>
        <item>Diplodocidae</item>
        <item>Brachiosauridae</item>
    </string-array>
    <string-array name="family_desc">
        <item>Ceratopsidae adalah kelompok dinosaurus yang dikenal dengan tanduk besar di kepala mereka.</item>
        <item>Hadrosauridae adalah kelompok dinosaurus yang dikenal dengan paruh seperti bebek mereka.</item>
        <item>Stegosauridae adalah kelompok dinosaurus yang dikenal dengan lempeng-kepala dan duri-duri besar di punggung mereka.</item>
        <item>Ankylosauridae adalah kelompok dinosaurus yang dikenal dengan tubuh dilindungi oleh lempengan tulang dan duri-duri, serta ekor yang kuat digunakan untuk pertahanan.</item>
        <item>Tyrannosauridae adalah kelompok dinosaurus yang dikenal dengan rahang yang besar dan gigi yang kuat.</item>
        <item>Spinosauridae adalah kelompok dinosaurus yang dikenal dengan hidung yang panjang dan rahang yang dipenuhi gigi panjang dan runcing.</item>
        <item>Diplodocidae adalah kelompok dinosaurus yang terkenal dengan leher yang sangat panjang dan tubuh yang relatif kecil.</item>
        <item>Brachiosauridae adalah kelompok dinosaurus yang dikenal dengan leher panjang yang membantu mereka mencapai makanan di daun pohon yang tinggi.</item>
    </string-array>
    <string-array name="family_period">
        <item>Kisaran Cretaceous</item>
        <item>Kisaran Cretaceous</item>
        <item>Kisaran Jurassic hingga Cretaceous</item>
        <item>Kisaran Jurassic hingga Cretaceous</item>
        <item>Kisaran Cretaceous</item>
        <item>Kisaran Cretaceous</item>
        <item>Kisaran Jurassic hingga Cretaceous</item>
        <item>Kisaran Jurassic hingga Cretaceous</item>
    </string-array>
    <string-array name="family_physical">
        <item>Memiliki tanduk besar di kepala dan kadang-kadang memiliki lempeng-kepala.</item>
        <item>Dilengkapi dengan paruh yang lebar dan rapi, cocok untuk merobek dan mengunyah tumbuhan.</item>
        <item>Dilapisi dengan lempeng-kepala dan duri-duri besar di punggung.</item>
        <item>Tubuh dilindungi oleh lempengan tulang dan duri-duri, serta ekor yang kuat digunakan untuk pertahanan.</item>
        <item>Memiliki rahang yang besar dan gigi yang kuat, dengan tubuh yang besar dan cakar yang kuat.</item>
        <item>Cenderung memiliki hidung yang panjang dan rahang yang dipenuhi gigi panjang dan runcing.</item>
        <item>Terkenal dengan leher yang sangat panjang dan tubuh yang relatif kecil, dengan ekor yang panjang dan ramping.</item>
        <item>Memiliki leher panjang yang membantu mereka mencapai makanan di daun pohon yang tinggi, dengan tubuh besar dan berat.</item>
    </string-array>
    <string-array name="family_behavior">
        <item>Herbivora</item>
        <item>Herbivora</item>
        <item>Herbivora</item>
        <item>Herbivora</item>
        <item>Karnivora</item>
        <item>Karnivora</item>
        <item>Herbivora</item>
        <item>Herbivora</item>
    </string-array>
    <string-array name="family_classification">
        <item>Ornithischia</item>
        <item>Ornithischia</item>
        <item>Ornithischia</item>
        <item>Ornithischia</item>
        <item>Saurischia</item>
        <item>Saurischia</item>
        <item>Saurischia</item>
        <item>Saurischia</item>
    </string-array>
    <string name="dino_nama">Nama dino</string>
    <string-array name="dino_icon">
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
        <item>@drawable/dino</item>
    </string-array>
    <string name="dino_deskripsi">Deskripsi dino</string>
    <string name="dino_karakteristik">Karakteristik dino</string>
    <string name="dino_kelompok">Kelompok</string>
    <string-array name="dino_habitat">
        
        <item>Tinggal di dataran dan padang rumput pada periode Cretaceous.</item>
        
        <item>Biasa ditemukan di daratan pada periode Cretaceous.</item>
        
        <item>Biasanya ditemukan di dataran banjir dan rawa-rawa pada periode Cretaceous.</item>
        
        <item>Sering menghuni dataran banjir dan padang rumput pada periode Cretaceous.</item>
        
        <item>Sering dijumpai di daratan pada periode Jurassic hingga Cretaceous.</item>
        
        <item>Tinggal di daerah daratan pada periode Jurassic hingga Cretaceous, seringkali berada di hutan atau padang rumput.</item>
        
        <item>Tinggal di dataran dan hutan pada periode Cretaceous.</item>
        
        <item>Umumnya ditemukan di dataran banjir dan hutan pada periode Cretaceous.</item>
        
        <item>Sering ditemukan di daerah daratan dan hutan pada periode Cretaceous.</item>
        
        <item>Biasanya ditemukan di dataran dan hutan pada periode Cretaceous.</item>
        
        <item>Umumnya hidup di wilayah perairan seperti sungai, danau, atau rawa-rawa pada periode Cretaceous.</item>
        
        <item>Sering ditemukan di daerah rawa-rawa atau tepi sungai pada periode Cretaceous.</item>
        
        <item>Umumnya ditemukan di daerah dataran tinggi dan pegunungan pada periode Jurassic.</item>
        
        <item>Sering menghuni dataran rendah dan hutan pada periode Jurassic.</item>
    </string-array>
    <string name="dino_makanan">Makanan</string>
    <string name="dino_panjang">Panjang</string>
    <string name="dino_tinggi">Tinggi</string>
    <string name="dino_bobot">Bobot</string>
    <string name="dino_kelemahan">Kelemahan</string>
    <string-array name="start_dino_array">
        <item>0</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
    </string-array>
    <string-array name="end_dino_array">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>
        <item>11</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string-array name="dino_species">
        <item>Triceratops</item>
        <item>Styracosaurus</item>
        <item>Edmontosaurus</item>
        <item>Parasaurolophus</item>
        <item>Stegosaurus</item>
        <item>Kentrosaurus</item>
        <item>Ankylosaurus</item>
        <item>Euoplocephalus</item>
        <item>Tyrannosaurus Rex</item>
        <item>Albertosaurus</item>
        <item>Spinosaurus</item>
        <item>Baryonyx</item>
        <item>Diplodocus</item>
        <item>Apatosaurus</item>
    </string-array>
    <string-array name="dino_desc">
        
        <item>Triceratops adalah dinosaurus besar dengan tiga tanduk di kepala dan sebuah lempeng-kepala di bagian belakang.</item>
        
        <item>Styracosaurus adalah dinosaurus dengan sebuah tanduk di hidung dan sejumlah tanduk lainnya di sekeliling lempeng-kepala.</item>
        
        <item>Edmontosaurus adalah dinosaurus herbivora yang besar dan berat, dengan paruh seperti bebek yang khas.</item>
        
        <item>Parasaurolophus adalah dinosaurus dengan crested yang mencolok di kepala yang berfungsi sebagai saluran suara.</item>
        
        <item>Stegosaurus adalah dinosaurus dengan punggung yang dilapisi dengan duri besar atau lempengan tulang yang menonjol.</item>
        
        <item>Kentrosaurus adalah dinosaurus dengan duri-duri tajam di punggung dan ekor yang kuat yang digunakan untuk pertahanan.</item>
        
        <item>Ankylosaurus adalah dinosaurus dengan tubuh dilindungi oleh lempengan tulang dan duri-duri, serta memiliki sebuah ekor yang kuat dan dilapisi oleh lempengan tulang yang besar.</item>
        
        <item>Euoplocephalus adalah dinosaurus dengan tubuh yang dilindungi oleh lempengan tulang dan duri-duri, serta memiliki sebuah bola tulang di ujung ekor yang digunakan untuk pertahanan.</item>
        
        <item>Tyrannosaurus Rex adalah dinosaurus karnivora raksasa yang dikenal dengan rahang yang besar dan gigi-gigi yang tajam.</item>
        
        <item>Albertosaurus adalah dinosaurus karnivora yang lebih kecil dari Tyrannosaurus Rex, namun tetap merupakan predator yang menakutkan.</item>
        
        <item>Spinosaurus adalah dinosaurus karnivora yang memiliki ciri khas berupa sail di punggungnya.</item>
        
        <item>Baryonyx adalah dinosaurus karnivora yang memiliki rahang yang panjang dan sempit, serta cakar yang besar.</item>
        
        <item>Diplodocus adalah dinosaurus herbivora yang memiliki leher yang panjang dan tubuh yang besar.</item>
        
        <item>Apatosaurus, juga dikenal sebagai Brontosaurus, adalah dinosaurus dengan tubuh besar dan leher yang panjang.</item>
    </string-array>
</resources>